# new-agent

./: .gitignore  agent.py  docker-compose.yaml  langgraph.json  lc_agent.py  pyproject.toml
files/: example.txt
src/: agent.py  basic_agent.py  cv_agent.py  deep_agent.py  lc_agent.py  lg_agent.py  lg_workflow.py  rag_agent.py  simple_rag_agent.py  utils.py
tests/integration_tests/: test_basic_agent.py  test_basic_agent_rag_eval.py  test_cv_agent.py  test_lc_agent.py  test_lc_agent_eval.py  test_lg_agent.py  test_rag_agent.py  test_simple_rag_agent.py  test_workflow.py
tests/unit_tests/: test_lc_agent.py
