[project]
name = "new-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentevals>=0.0.9",
    "beautifulsoup4>=4.14.2",
    "deepagents>=0.2.8",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langsmith[pytest]>=0.4.46",
    "pypdf>=6.4.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
    "pytest>=9.0.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
